--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.6) unstable; urgency=low
+
+  * dh_movefiles: don't die on symlinks (#25642). (Hope I got the fix right
+    this time..)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 11 Aug 1998 20:11:13 -0700
+
 debhelper (1.1.5) unstable; urgency=low
 
   * dh_builddeb, dh_installchangelogs: converted to perl.
