--- a/doc/README
+++ b/doc/README
@@ -41,4 +41,14 @@ print << `EOF`
 #DEBHELPER#
 EOF
 
+Other notes:
+-----------
+
+Note that if you are generating a debian package that has arch-indep and
+arch-dependant portions, and you are using dh_movefiles to move the
+arch-indep files out of debian/tmp, you need to make sure that dh_movefiles
+does this even if only the arch-dependant package is being built (for ports
+to other architectures). I handle this in debian/rules.multi by calling
+dh_movefiles in the install target.
+
 -- Joey Hess <joeyh@master.debian.org>
