--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.1.7) unstable; urgency=low
+
+  * examples/rules.multi: moved dh_movefiles into the install section.
+  * doc/README: Added a note explaining why above change was necessary.
+  * Dh_Lib.pm: escape_shell(): now escapes the full range of special
+    characters recognized by bash (and ksh). Thanks to Branden Robinson
+    <branden@purdue.edu> for looking that up.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 11 Aug 1998 23:32:05 -0700
+
 debhelper (1.1.6) unstable; urgency=low
 
   * dh_movefiles: don't die on symlinks (#25642). (Hope I got the fix right
