--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.9) unstable; urgency=low
+
+  * dh_fixperms: has been removing the +x bits of all doc/*/examples/* files
+    since version 0.97 or so. Fixed.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 16 Aug 1998 17:11:48 -0700
+
 debhelper (1.1.8) unstable; urgency=low
 
   * Dh_Lib.pm: made U_PARAMS an array of parameters.
