--- a/doc/TODO
+++ b/doc/TODO
@@ -69,3 +69,6 @@ Fixes to backport to 1.0 tree:
 
 * dh_installdocs used -m 655 for a TODO file. (minor, dh_fixperms cleans up
 	after it)
+* dh_fixperms had a problkem with removing x bits on examples files -
+	backport fix.
+	
