--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.11) unstable; urgency=low
+
+  * dh_installchangelogs: added -k flag, that will make it install a symlink
+    to the original name of the upstream changelog.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 20 Aug 1998 15:40:40 -0700
+
 debhelper (1.1.10) unstable; urgency=low
 
   * It's come to my attention that a few packages use filename globbing in
