--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.1.12) unstable; urgency=low
+
+  * dh_installdocs: forgot to pass package name to isnative(). Any native
+    debian package that had a debian/TODO would have it installed with the
+    wrong name, and debhelper would warn of undefined values for some
+    packages. Fixed.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 27 Aug 1998 12:35:42 -0700
+
 debhelper (1.1.11) unstable; urgency=low
 
   * dh_installchangelogs: added -k flag, that will make it install a symlink
