--- a/doc/TODO
+++ b/doc/TODO
@@ -32,6 +32,10 @@ Wishlist items:
   to do that originally, and even worse, it is often run after
   dh_installdeb, so the fragements wouldn't go into the postinst. So maybe a
   new script is called for.
+* Need a way to make dh_strip not strip any static libs. Also, it'd be nice
+  if there were options to dh_strip, dh_compress, etc, to allow inclusiuon of
+  directories and exclusion of files based on filname globbing. (Request from
+  Matthias Klose <doko@cs.tu-berlin.de>)
 * docbase support (#25233). Waiting for docbase to stabalize and be used
   widly.
 * Support /etc/X11/window-managers, by making it easy for window managers to
