--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.13) unstable; urgency=low
+
+  * dh_installmanpages: rewritten in perl. Allows me to fix bug #26221 (long
+    symlink problem after .so conversion), and is about twice as fast.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 29 Aug 1998 22:06:06 -0700
+
 debhelper (1.1.12) unstable; urgency=low
 
   * dh_installdocs: forgot to pass package name to isnative(). Any native
