--- a/doc/TODO
+++ b/doc/TODO
@@ -73,6 +73,5 @@ Fixes to backport to 1.0 tree:
 
 * dh_installdocs used -m 655 for a TODO file. (minor, dh_fixperms cleans up
 	after it)
-* dh_fixperms had a problkem with removing x bits on examples files -
+* dh_fixperms had a problem with removing x bits on examples files -
 	backport fix.
-	
