--- a/debhelper.1
+++ b/debhelper.1
@@ -100,5 +100,8 @@ An introduction to debhelper.
 .TP
 .BR /usr/doc/debhelper/examples/
 A set of example debian/rules files that use debhelper.
+.TP
+.BR http://kitenet.net/programs/debhelper/
+Debhelper web site.
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
