--- a/doc/README
+++ b/doc/README
@@ -51,4 +51,6 @@ does this even if only the arch-dependant package is being built (for ports
 to other architectures). I handle this in debian/rules.multi by calling
 dh_movefiles in the install target.
 
+Debhelper's home page is at http://kitenet.net/programs/debhelper/
+
 -- Joey Hess <joeyh@master.debian.org>
