--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.1.15) unstable; urgency=medium
+
+  * dh_installmanpages: the new perl version had a nasty habit of 
+    installing .so.x library files as man pages. Fixed.
+  * dh_installmanpages: the code to exclude searching for man pages in
+    debian/tmp directories was broken. Fixed.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 31 Aug 1998 00:05:17 -0700
+
 debhelper (1.1.14) unstable; urgency=low
 
   * Debhelper now has a web page at http://kitenet.net/programs/debhelper/
