--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.16) unstable; urgency=low
+
+  * dh_fixperms: remove execute bits from static libraries as well as 
+    shared libraries. (#26414)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  4 Sep 1998 14:46:37 -0700
+
 debhelper (1.1.15) unstable; urgency=medium
 
   * dh_installmanpages: the new perl version had a nasty habit of 
