--- a/debhelper.1
+++ b/debhelper.1
@@ -93,6 +93,13 @@ Enables verbose mode.
 .TP
 .I DH_NO_ACT
 Enables no-act mode.
+.TP
+.I DH_OPTIONS
+Anything in this variable will be prepended to the command line
+arguments of all debhelper commands. This in useful in some situations,
+for example, if you need to pass -p to all debhelper commands that will be
+run. If you use DH_OPTIONS, be sure to use "dh_testversion 1.1.17" - older
+debhelpers will ignore it and do things you don't want them to.
 .SH "SEE ALSO"
 .TP
 .BR /usr/doc/debhelper/README
