--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.18) unstable; urgency=low
+
+  * dh_installemacsen: substitute package name for #PACKAGE# when setting
+    up postinst and prerm (#26560).
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  8 Sep 1998 14:24:30 -0700
+
 debhelper (1.1.17) unstable; urgency=low
 
   * dh_strip: on Richard Braakman's advice, strip the .comment and .note
