--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.1.19) unstable; urgency=low
+
+  * dh_installmanpages: look at basename of man pacges specified on command
+    line to skip, for backwards compatability. 
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 10 Sep 1998 11:31:42 -0700
+
 debhelper (1.1.18) unstable; urgency=low
 
   * dh_installemacsen: substitute package name for #PACKAGE# when setting
