--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.1.20) unstable; urgency=low
+
+  * Added a --same-arch flag, that is useful in the rare case when you have
+    a package that builds only for 1 architecture, as part of a multi-part,
+    multi-architecture source package. (Ie, netscape-dmotif).
+  * Modified dh_installinit -r so it does start the daemon on the initial
+    install (#26680).
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  2 Oct 1998 15:55:13 -0700
+
 debhelper (1.1.19) unstable; urgency=low
 
   * dh_installmanpages: look at basename of man pacges specified on command
