--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.1.21) unstable; urgency=low
+
+  * Added install to .PHONY target of example rules files.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 11 Oct 1998 22:36:10 -0700
+
 debhelper (1.1.20) unstable; urgency=low
 
   * Added a --same-arch flag, that is useful in the rare case when you have
