--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.1) unstable; urgency=low
+
+  * dh_strip, dh_installinit: rewrite in perl.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  9 Nov 1998 20:04:12 -0800
+
 debhelper (1.2.0) unstable; urgency=low
 
   * A new unstable dist means I'm back to converting more of debhelper to
