--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (1.2.0) unstable; urgency=low
+
+  * A new unstable dist means I'm back to converting more of debhelper to
+    perl.. Since 1.1 has actually stabalized, I've upped this to 1.2.
+  * dh_md5sums: rewritten in perl, for large speed gain under some
+    circumstances (old version called perl sometimes, once per package.)
+  * dh_installmenu, dh_installwmacsen, dh_installwm: perlized.
+  * Dh_Lib.pm: made autoscript() really work.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  9 Nov 1998 13:04:16 -0800
+
 debhelper (1.1.24) unstable; urgency=low
 
   * dh_suidregister: remove suid/sgid bits from all files registered. The
