--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.2) unstable; urgency=low
+
+  * dh_du, dh_shlibdeps, dh_undocumented: rewrite in perl.
+  * dh_undocumented: shortened the symlink used for section 7 undocumented
+    man pages, since it can link to undocuemented.7.gz in the same directory.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 10 Nov 1998 13:40:22 -0800
+
 debhelper (1.2.1) unstable; urgency=low
 
   * dh_strip, dh_installinit: rewrite in perl.
