--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+debhelper (1.2.3) unstable; urgency=low
+
+  * dh_fixperms, dh_installdebfiles, dh_installdeb: perlized
+  * dh_suidregister: perlized, with help from Che_Fox (and Tom Christianson,
+    indirectly..).
+  * dh_suidregister: include leading 0 (or 1 for sticky, etc) in file
+    permissions.
+  * Only 3 more to go and it'll be 100% perl.
+  * Made $dh{EXCLUDE_FIND} available to perl scripts.
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 10 Nov 1998 15:47:43 -0800
+
 debhelper (1.2.2) unstable; urgency=low
 
   * dh_du, dh_shlibdeps, dh_undocumented: rewrite in perl.
