--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.2.4) unstable; urgency=low
+
+  * dh_debstd, dh_movefiles: perlized.
+  * dh_debstd: fixed -c option.
+  * dh_installinit: fixed minor perl -w warning.
+  * Only 1 shell script remains! (But it's a doozy..)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 13 Nov 1998 13:29:39 -0800
+
 debhelper (1.2.3) unstable; urgency=low
 
   * dh_fixperms, dh_installdebfiles, dh_installdeb: perlized
