--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (1.2.5) unstable; urgency=low
+
+  * The perl conversion is complete.
+  .
+  * dh_compress: perlized (yay, perl has readlink, no more ls -l | awk 
+    garbage!)
+  * dh_lib, dh_getopt.pl: deleted, nothing uses them anymore.
+  * debian/rules: don't install above 2 files.
+  * doc/PROGRAMMING: removed all documentation of the old shell library
+    interface.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 13 Nov 1998 15:36:57 -0800
+
 debhelper (1.2.4) unstable; urgency=low
 
   * dh_debstd, dh_movefiles: perlized.
