--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.6) unstable; urgency=low
+
+  * dh_movefiles: fixed non-integer comparison (#29476)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 15 Nov 1998 13:03:09 -0800
+
 debhelper (1.2.5) unstable; urgency=low
 
   * The perl conversion is complete.
