--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.7) unstable; urgency=low
+
+  * dh_movefiles: Fixed another bug.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 16 Nov 1998 12:53:05 -0800
+
 debhelper (1.2.6) unstable; urgency=low
 
   * dh_movefiles: fixed non-integer comparison (#29476)
