--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.8) unstable; urgency=low
+
+  * Suggest dh-make (#29376).
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 18 Nov 1998 02:29:47 -0800
+
 debhelper (1.2.7) unstable; urgency=low
 
   * dh_movefiles: Fixed another bug.
