--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.10) unstable; urgency=low
+
+  * examples/*: added dh_link calls to example rules files.
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 20 Nov 1998 15:43:07 -0800
+
 debhelper (1.2.9) unstable; urgency=low
 
   * Added dh_link, which generates policy complient symlinks in binary
