--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.9) unstable; urgency=low
+
+  * Added dh_link, which generates policy complient symlinks in binary
+    packages, painlessly.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 19 Nov 1998 18:43:36 -0800
+
 debhelper (1.2.8) unstable; urgency=low
 
   * Suggest dh-make (#29376).
