--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.11) unstable; urgency=low
+
+  * dh_movefiles: if given absolute filenames to move (note that that is
+    *wrong*), it will move relative files anyway. Related to bug #29761.
+  * dh_link: made relative links work right. (I hope!)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 20 Nov 1998 20:21:51 -0800
+
 debhelper (1.2.10) unstable; urgency=low
 
   * examples/*: added dh_link calls to example rules files.
