--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.13) unstable; urgency=low
+
+  * Spelling and typo fixes.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 25 Nov 1998 15:23:55 -0800
+
 debhelper (1.2.12) unstable; urgency=low
 
   * examples/*: moved dh_makeshlibs call to before dh_installdeb call.
