--- a/dh_du.1
+++ b/dh_du.1
@@ -7,7 +7,7 @@ dh_du \- generate DEBIAN/du file
 dh_du is a debhelper program that was responsible for generating
 a DEBIAN/du file, which listed the disk usage of directories in the package.
 .P
-This program is now depricated, and does nothing, after a decision by the
+This program is now deprecated, and does nothing, after a decision by the
 debian developers that du control files should not exit. It will simply
 output a warning message now.
 .SH "SEE ALSO"
