--- a/doc/README
+++ b/doc/README
@@ -47,9 +47,9 @@ Other notes:
 -----------
 
 Note that if you are generating a debian package that has arch-indep and
-arch-dependant portions, and you are using dh_movefiles to move the
+arch-dependent portions, and you are using dh_movefiles to move the
 arch-indep files out of debian/tmp, you need to make sure that dh_movefiles
-does this even if only the arch-dependant package is being built (for ports
+does this even if only the arch-dependent package is being built (for ports
 to other architectures). I handle this in debian/rules.multi by calling
 dh_movefiles in the install target.
 
