--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.14) unstable; urgency=low
+
+  * Really fixed #29762 this time. This also fixes #30025, which asked that
+    dh_makeshlibs come before dh_shlibdeps, so the files it generates can
+    also be used as a shlibs.local file, which will be used by dh_shlibdeps.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 29 Oct 1998 04:00:14 -0800
+
 debhelper (1.2.13) unstable; urgency=low
 
   * Spelling and typo fixes.
