--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.15) unstable; urgency=low
+
+  * Just a re-upload, last upload failed for some obscure reason.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 29 Nov 1998 13:07:44 -0800
+
 debhelper (1.2.14) unstable; urgency=low
 
   * Really fixed #29762 this time. This also fixes #30025, which asked that
