--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (1.2.17) unstable; urgency=low
+
+  * dh_makeshlibs: relaxed regexp to find library name and number a little so
+    it will work on libraries with a major but no minor version in their
+    filename (examples of such: libtcl8.0.so.1, libBLT-unoff.so.1)
+  * dh_movefiles: added --sourcedir option to make it move files out of 
+    some directory besides debian/tmp (#30221)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  4 Dec 1998 13:56:57 -0800
+
 debhelper (1.2.16) unstable; urgency=low
 
   * dh_installchangelogs: now detects html changelogs and installs them as
