--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -17,7 +17,9 @@ debian/changelog.)
 .P
 If an upstream changelog file is specified as an option, and the package is
 not a native debian package, then this upstream changelog will be installed
-as usr/doc/package/changelog in the package build directory.
+as usr/doc/package/changelog in the package build directory. If the
+changelog is a html file (determined by file extention), it will be
+installed as usr/doc/package/changelog.html instead.
 .SH OPTIONS
 .TP
 .B debhelper options
@@ -44,6 +46,6 @@ for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
 .BR debhelper (1)
 .SH "CONFORMS TO"
-Debian policy, version 2.3.0.0
+Debian policy, version 2.5.0.0
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
