--- a/dh_movefiles.1
+++ b/dh_movefiles.1
@@ -3,12 +3,12 @@
 dh_movefiles \- moves files out of debian/tmp into subpackages
 .SH SYNOPSIS
 .B dh_movefiles
-.I "[debhelper options] [file ..]"
+.I "[debhelper options] [--sourcedir=dir] [file ..]"
 .SH "DESCRIPTION"
 dh_movefiles is a debhelper program that is responsible for moving files out
-of debian/tmp and into other package build directories. This may be useful
-if your package has a Makefile that installs everything into debian/tmp, and
-you need to break that up into subpackages.
+of debian/tmp or some other directory and into other package build 
+directories. This may be useful if your package has a Makefile that installs
+everything into debian/tmp, and you need to break that up into subpackages.
 .P
 Files named debian/package.files list the files to be moved, separated by
 whitespace. The filenames listed should be relative to debian/tmp/. You can
@@ -26,6 +26,13 @@ last in debian packages, particularly in shared library packages.
 See
 .BR debhelper (1)
 for a list of options common to all debhelper commands.
+.TP
+.B --sourcedir=dir
+Instead of moveing files out of debian/tmp (the default), this option makes
+it move files out of some other directory. Since the entire contents of
+the sourcedir is moved, specifiying something like --sourcedir=/ is very
+unsafe, so to prevent mistakes, the sourcedir must be a relative filename; it
+cannot begin with a `/'.
 .TP
 .B file ..
 Lists files to move. The filenames listed should be relative to debian/tmp/.
