--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.18) unstable; urgency=medium
+
+  * dh_fixperms: was not fixing permissions of files in usr/doc/ to 644,
+    this has been broken since version 1.2.3.
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  6 Dec 1998 23:35:35 -0800
+
 debhelper (1.2.17) unstable; urgency=low
 
   * dh_makeshlibs: relaxed regexp to find library name and number a little so
