--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.20) unstable; urgency=low
+
+  * dh_compress: handle the hard link stuff properly, it was broken. Also
+    faster now.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 23 Dec 1998 19:53:03 -0500
+
 debhelper (1.2.19) unstable; urgency=low
 
   * dh_listpackages: new command. Takes the standard options taken by other
