--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.22) unstable; urgency=low
+
+  * Reversed change in last version; don't clobber mode (#31628).
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  8 Jan 1999 15:01:25 -0800
+
 debhelper (1.2.21) unstable; urgency=low
 
   * dh_installdocs: Added doc-base support, if debian/<package>.doc-base
