--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.23) unstable; urgency=low
+
+  * autoscripts/postrm-wm: use "=", not "==" (#31727).
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 11 Jan 1999 13:35:00 -0800
+
 debhelper (1.2.22) unstable; urgency=low
 
   * Reversed change in last version; don't clobber mode (#31628).
