--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -12,7 +12,8 @@ dh_fixperms makes all files in usr/doc in the package build directory
 (excluding files in the examples/ directory) be mode 644. It also changes 
 the permissions of all man pages to mode 644. It makes all files be owned by 
 root, and it removes group and other write permission from all files.
-Finally, it removes execute permissions from any libraries that have it set.
+It removes execute permissions from any libraries that have it set. Finally,
+it removes the setuid and setgid bits from all files in the package.
 .SH OPTIONS
 .TP
 .B debhelper options
