--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.26) unstable; urgency=low
+
+  * dh_installdocs: use prerm-doc-base script fragement. Was using
+    postrm-doc-base, for some weird reason.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 18 Jan 1999 13:36:40 -0800
+
 debhelper (1.2.25) unstable; urgency=low
 
   * autoscripts/*menu*: It turns out that "command" is like test -w, it will
