--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.28) unstable; urgency=low
+
+  * dh_link: fixed bug that prevent multiple links to the same source from
+    being made. (#23255)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun, 24 Jan 1999 19:46:33 -0800
+
 debhelper (1.2.27) unstable; urgency=low
 
   * autoscripts/*menu*: "test", not "text"!
