--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.27) unstable; urgency=low
+
+  * autoscripts/*menu*: "test", not "text"!
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 19 Jan 1999 15:18:52 -0800
+
 debhelper (1.2.26) unstable; urgency=low
 
   * dh_installdocs: use prerm-doc-base script fragement. Was using
