--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.29) unstable; urgency=high
+
+  * Do not include bogus chsh, chfn, passwd links in debhelper binary!
+    These were acidentially left in after dh_link testing I did as I was
+    working on the last version of debhelper.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 25 Jan 1999 20:26:46 -0800
+
 debhelper (1.2.28) unstable; urgency=low
 
   * dh_link: fixed bug that prevent multiple links to the same source from
