--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (1.2.30) unstable; urgency=low
+
+  * dh_fixperms: cut down the number of chmod commands that are executed
+    from 3 to 1, no change in functionality.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  1 Feb 1999 17:05:29 -0800
+
 debhelper (1.2.29) unstable; urgency=high
 
   * Do not include bogus chsh, chfn, passwd links in debhelper binary!
