--- a/dh_installinit.1
+++ b/dh_installinit.1
@@ -39,7 +39,7 @@ the --init-script parameter described below.)
 .B \-uparams, \--update-rcd-params=params
 Pass "params" to 
 .BR update-rc.d (8)
-If not specified, "default" will be passed to
+If not specified, "defaults" will be passed to
 .BR update-rc.d (8)
 .TP
 .B \--init-script=scriptname
