--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (1.2.31) unstable; urgency=low
+
+  * dh_installinit.1: minor typo fix (closes: #32753)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue,  2 Feb 1999 14:32:46 -0800
+
 debhelper (1.2.30) unstable; urgency=low
 
   * dh_fixperms: cut down the number of chmod commands that are executed
