--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (1.2.32) unstable; urgency=low
+
+  * dh_suidmanager: if it cannot determine the user name or group name from
+    the uid or gid, it will pass the uid or gid to suidmanager. This should
+    probably never happen, but it's good to be safe.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  4 Feb 1999 16:00:35 -0800
+
 debhelper (1.2.31) unstable; urgency=low
 
   * dh_installinit.1: minor typo fix (closes: #32753)
