--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (1.2.33) unstable; urgency=low
+
+  * dh_compress: verbose_print() cd's.
+  * dh_compress: clear the hash of hard links when we loop - was making
+    dh_compress fail on multi-binary packages that had harlinks. Thanks to
+    Craig Small for spotting this.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  4 Feb 1999 20:19:37 -0800
+
 debhelper (1.2.32) unstable; urgency=low
 
   * dh_suidmanager: if it cannot determine the user name or group name from
